--- a/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
@@ -87,111 +87,10 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
-        android:text="@string/weightAdd"
+        android:text="@string/counterpartyWeight"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/money" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/weight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addWeight">
-
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/gross"
-            android:textColor="@color/textColor"
-            android:labelFor="@id/gross"
-            app:layout_constraintBottom_toBottomOf="@+id/gross"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/gross" />
-
-        <EditText
-            android:id="@+id/gross"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text"
-            app:layout_constraintTop_toBottomOf="@+id/weightDelete"
-            android:importantForAutofill="no" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/tare"
-            android:textColor="@color/textColor"
-            android:labelFor="@id/tare"
-            app:layout_constraintBottom_toBottomOf="@+id/tare"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tare" />
-
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/net"
-            android:textColor="@color/textColor"
-            android:labelFor="@id/net"
-            app:layout_constraintBottom_toBottomOf="@+id/net"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/net" />
-
-        <EditText
-            android:id="@+id/tare"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/gross"
-            app:layout_constraintTop_toBottomOf="@+id/gross"
-            android:importantForAutofill="no" />
-
-        <EditText
-            android:id="@+id/net"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="number"
-            android:textColor="@color/textColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tare"
-            app:layout_constraintTop_toBottomOf="@+id/tare"
-            android:importantForAutofill="no" />
-
-        <ImageButton
-            android:id="@+id/weightDelete"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-            android:contentDescription="@string/delete" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/counterpartyWeight" />
 
     <Button
         android:id="@+id/fixArrive"
@@ -308,6 +207,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/leaveDate" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/counterpartyWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/money" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
