--- a/spedition/SpeditionClient/app/src/main/res/layout/report_list_row.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/report_list_row.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/textColor"
-        app:layout_constraintStart_toEndOf="@+id/check"
+        app:layout_constraintStart_toEndOf="@+id/saveStatus"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -63,4 +63,16 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/saveStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:tint="@color/someNew"
+        app:layout_constraintBottom_toBottomOf="@+id/check"
+        app:layout_constraintStart_toEndOf="@+id/check"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_save_24px"
+        android:contentDescription="@string/save_status" />
 </androidx.constraintlayout.widget.ConstraintLayout>
