--- a/spedition/SpeditionClient/app/src/main/res/layout/activity_login.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             android:labelFor="@id/editTextPhone"
             android:text="@string/login"
+            android:textColor="@color/textColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -66,6 +67,7 @@
             android:layout_marginTop="24dp"
             android:labelFor="@id/editPassword"
             android:text="@string/password"
+            android:textColor="@color/textColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
