--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -228,6 +228,9 @@ a:hover{
     border-radius: 8pt;
     padding: 0 2px;
     position: relative;
+    color: forestgreen;
+    /*font-weight: bold;*/
+    cursor: pointer;
 }
 .mini-close:hover{
     text-shadow: 0 0 2px gray;
@@ -376,4 +379,40 @@ input.error {
 .probe-table *{
     user-select: text;
     -moz-user-select: text;
+}
+.editor-column{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.tips{
+    color: white;
+    background-color: black;
+    padding: 0 4px;
+    border-radius: 500px;
+    font-size: 10px;
+}
+.screen-locker{
+    position: absolute;
+    background-color: #4d5d4a;
+    z-index: 102;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: none;
+}
+.unlock {
+    display: block;
+}
+.locker-text{
+
+    max-width: 40%;
+    margin-top: 20%;
+    margin-left: 20%;
+    width: fit-content;
+}
+.locker-text *{
+    font-weight: bold;
+    color: white;
+    font-size: 18pt;
 }
