--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -302,6 +302,7 @@ input.error {
     display: flex;
     flex-direction: row;
 }
+
 .navigation-panel{
     display: flex;
     flex-direction: column;
@@ -315,7 +316,7 @@ input.error {
 .content-holder{
     display: flex;
     flex-direction: row;
-    height: 100;
+    height: 100%;
     flex: 1 0 auto;
     border-left: solid gray 1px;
 }
@@ -405,7 +406,6 @@ input.error {
     display: block;
 }
 .locker-text{
-
     max-width: 40%;
     margin-top: 20%;
     margin-left: 20%;
