--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -316,7 +316,7 @@ input.error {
 .content-holder{
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: calc(100% - 34px);
     flex: 1 0 auto;
     border-left: solid gray 1px;
 }
@@ -395,7 +395,7 @@ input.error {
 }
 .screen-locker{
     position: absolute;
-    background-color: #4d5d4a;
+    background-color: #8a3d44;
     z-index: 102;
     width: 100%;
     height: 100%;
@@ -416,3 +416,4 @@ input.error {
     color: white;
     font-size: 18pt;
 }
+
