--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -25,6 +25,9 @@
 body{
     background-color: aliceblue;
 }
+.blur{
+    filter: blur(5pt);
+}
 button{
     border: solid #7ecfcf 1.2pt;
     min-width: 70pt;
@@ -399,7 +402,7 @@ input.error {
 }
 .screen-locker{
     position: absolute;
-    background-color: #8a3d44;
+    background-color: rgba(30, 30, 30, 0.7);
     z-index: 102;
     width: 100%;
     height: 100%;
