--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -357,10 +357,13 @@ input.error {
     height: 100%;
 }
 .page-column{
-    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    /*flex: 1 0 auto;*/
 }
 .page-content{
-
+    display: flex;
+    flex-direction: row;
 }
 .tab{
     border: solid gray 1px;
