--- a/src/main/webapp/css/DataContainer.css
+++ b/src/main/webapp/css/DataContainer.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
 }
 
 .turn-date{
